Restrict autocomplete height to 4 entries; allow scrolling
This allows the entire list of autocomplete entries to be viewed,
although it does introduce some rather undesirable scrolling behaviour
at the extremities of the list which I've not been able to fix.

--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -375,6 +375,12 @@ input[type=submit].button-blue,
     border: 0px !important;
 }
 
+.ui-autocomplete {
+    max-height: 120px;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
 .bar-title .button-menu {
     position: absolute;
     right: 0px;
