Update translation to latest provided

--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -27,7 +27,7 @@
                     <div id="map_box">
                         <div id="map"></div>
                             <div id="search">
-                                <input name="pc" id="pc" autocorrect="off" autocomplete="off" placeholder="Ungefähre Adresse des Mangels"><input type="button" value="" id="btn-search">
+                                <input name="pc" id="pc" autocorrect="off" autocomplete="off" placeholder="Ungefähre Adresse des Schadens"><input type="button" value="" id="btn-search">
                             </div>
                             <div id="swap-map" class="nodisplay">Stadtplan</div>
                             <div id="mark-here" class="nodisplay">
