--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -17,7 +17,7 @@
 
                                     <div>
                                         <label for="form_detail">Beschreibung</label>
-                                        <textarea name="detail" id="form_detail" placeholder="Beschreiben Sie den Mangel." required><%= report.details %></textarea>
+                                        <textarea name="detail" id="form_detail" placeholder="Beschreiben Sie den Schaden." required><%= report.details %></textarea>
                                     </div>
 
                                     <div id="bottom">
