--- a/www/templates/welcome.html
+++ b/www/templates/welcome.html
@@ -6,7 +6,7 @@
                         <h1>Z&uuml;ri wie neu</h1>
 
                         <p>
-                            Geben Sie Ihre Kontaktdaten an um Mängel melden zu können.
+                            Geben Sie Ihre Kontaktdaten an um Schäden melden zu können.
                         </p>
                     </div>
 
@@ -19,7 +19,7 @@
                                         <input type="email" email="form-email" id="form-email" value="<%= email %>">
                                     </div>
                                     <div>
-                                        <label for="form-name">Name (optional)</label>
+                                        <label for="form-name">Name</label>
                                         <input type="text" name="form-name" id="form-name" value="<%= name %>">
                                     </div>
                                     <div>
