--- a/www/templates/details_extra.html
+++ b/www/templates/details_extra.html
@@ -1,6 +1,6 @@
             <header class="bar-title">
                 <div class="button-prev">Zurück</div>
-                <h1 class="title">Further Details</h1>
+                <h1 class="title">Weitere Details</h1>
             </header>
 
             <div class="content dot-background" role="main">
