--- a/www/templates/photo.html
+++ b/www/templates/photo.html
@@ -36,7 +36,7 @@
                                               <% if ( files.length == 1 ) { %>
                                                   Foto verwenden
                                               <% } else { %>
-                                                  Use photos
+                                                  Fotos verwenden
                                               <% } %>
                                           </a>
                                       </div>
