--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -13,7 +13,7 @@
                                         <input type="email" name="form-email" id="form-email" value="<%= email %>">
                                     </div>
                                     <div>
-                                        <label for="form-name">Name (optional)</label>
+                                        <label for="form-name">Name</label>
                                         <input type="text" name="form-name" id="form-name" value="<%= name %>">
                                     </div>
                                     <div>
