--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -3,88 +3,74 @@
             <h1 class="title">[% loc('Privacy Policy') %]</h1>
         </header>
         <div class="content textpage" role="main">
-            <h3>
-            Allgemeines
-            </h3>
+            <h3 id="allgemeines">Allgemeines</h3>
 
-            <p>
-            Im Rahmen des Öffentlichkeitsprinzips macht die Stadt Zürich wichtige Informationen auf dem Internet allgemein verfügbar. Die Stadt Zürich kann nicht verhindern, dass sich die typischen Risiken der von ihr auf dem Internet zur Verfügung gestellten Informationen in einzelnen Fällen verwirklichen. Städtische Internetseiten können deshalb nur unter folgenden Voraussetzungen und Einschränkungen genutzt werden:
-            </p>
+            <p>Im Rahmen des Öffentlichkeitsprinzips macht die Stadt Zürich wichtige Informationen auf dem Internet allgemein verfügbar. Die Stadt Zürich kann nicht verhindern, dass sich die typischen Risiken der von ihr auf dem Internet zur Verfügung gestellten Informationen in einzelnen Fällen verwirklichen. Städtische Internetseiten können deshalb nur unter folgenden Voraussetzungen und Einschränkungen genutzt werden:</p>
 
-            <h3>
-            Verfügbarkeit
-            </h3>
+            <h3 id="verfgbarkeit">Verfügbarkeit</h3>
 
-            <p>
-            Die Stadt Zürich behält sich vor, einzelne Informationsangebote oder Funktionalitäten abzuändern, grundsätzlich neu zu gestalten oder ohne Vorankündigung vom Netz zu nehmen. Daher kann sie nicht verantwortlich gemacht werden für die Folgen, wenn gewisse Informationen nicht mehr oder nicht mehr in der bisherigen Form zur Verfügung stehen.
-            </p>
+            <p>Die Stadt Zürich behält sich vor, einzelne Informationsangebote oder Funktionalitäten abzuändern, grundsätzlich neu zu gestalten oder ohne Vorankündigung vom Netz zu nehmen. Daher kann sie nicht verantwortlich gemacht werden für die Folgen, wenn gewisse Informationen nicht mehr oder nicht mehr in der bisherigen Form zur Verfügung stehen.</p>
 
-            <p>
-            Die Stadt Zürich kann nicht dafür einstehen, dass ihre elektronischen Informationsangebote sowie die angebotenen Funktionalitäten (wie z. B. eine Suchfunktion) jederzeit störungsfrei benutzt und die abgefragten Informationen reibungslos und fehlerfrei übertragen werden können.
-            </p>
+            <p>Die Stadt Zürich kann nicht dafür einstehen, dass ihre elektronischen Informationsangebote sowie die angebotenen Funktionalitäten (wie z. B. eine Suchfunktion) jederzeit störungsfrei benutzt und die abgefragten Informationen reibungslos und fehlerfrei übertragen werden können.</p>
 
-            <p>
-            Die Stadt Zürich kann nicht gewährleisten, dass die von ihr auf dem Internet zur Verfügung gestellten Informationen jederzeit aktuell, detailgenau und vollständig sind und alle erdenklichen Sachverhalte berücksichtigen.
-            </p>
+            <p>Die Stadt Zürich kann nicht gewährleisten, dass die von ihr auf dem Internet zur Verfügung gestellten Informationen jederzeit aktuell, detailgenau und vollständig sind und alle erdenklichen Sachverhalte berücksichtigen.</p>
 
-            <h3>
-            Rechte an Inhalten
-            </h3>
+            <h3 id="rechte_an_inhalten">Rechte an Inhalten</h3>
 
-            <p>
-            Die im Internet verwendeten Informationsmittel (wie Texte, Illustrationen, Logos, Fotos, Videos, Tondokumente, Grafiken sowie das Layout) der Stadt Zürich sind immaterialgüterrechtlich und insbesondere urheberrechtlich geschützt, soweit sie nicht (wie z. B. Gesetzestexte und Gerichtsurteile) durch einschlägige Rechtsnormen ausdrücklich vom Schutz ausgenommen werden.
+            <p>Die im Internet verwendeten Informationsmittel (wie Texte, Illustrationen, Logos, Fotos, Videos, Tondokumente, Grafiken sowie das Layout) der Stadt Zürich sind immaterialgüterrechtlich und insbesondere urheberrechtlich geschützt, soweit sie nicht (wie z. B. Gesetzestexte und Gerichtsurteile) durch einschlägige Rechtsnormen ausdrücklich vom Schutz ausgenommen werden.</p>
 
-            <p>
-            Die auf städtischen Internetseiten zur Verfügung gestellten Informationen dürfen deshalb nur angesehen, zum Eigengebrauch heruntergeladen und ausgedruckt werden. Damit werden jedoch keine weiteren Rechte bezüglich der Inhalte übertragen – Ausnahme unter Punkt «Open Government Data».
-            </p>
+            <p>Die auf städtischen Internetseiten zur Verfügung gestellten Informationen dürfen deshalb nur angesehen, zum Eigengebrauch heruntergeladen und ausgedruckt werden. Damit werden jedoch keine weiteren Rechte bezüglich der Inhalte übertragen – Ausnahme unter Punkt «Open Government Data».</p>
 
-            <p>
-            Jede weitere Verwendung von Inhalten aus den städtischen Internetseiten und insbesondere das Einbinden (über Frames oder Inline-Links) in andere Seiten ist nur mit Einverständnis der Rechtsinhabenden gestattet.
-            </p>
+            <p>Jede weitere Verwendung von Inhalten aus den städtischen Internetseiten und insbesondere das Einbinden (über Frames oder Inline-Links) in andere Seiten ist nur mit Einverständnis der Rechtsinhabenden gestattet.</p>
 
-            <p>
-            Für den Umgang mit dem städtischen Wappen und anderen amtlichen Kennzeichen ist das Bundesgesetz zum Schutz öffentlicher Wappen und anderer öffentlicher Zeichen massgebend.
-            </p>
+            <p>Für den Umgang mit dem städtischen Wappen und anderen amtlichen Kennzeichen ist das Bundesgesetz zum Schutz öffentlicher Wappen und anderer öffentlicher Zeichen massgebend.</p>
 
-            <h3>
-            Datenerfassung
-            </h3>
+            <h3 id="open_government_data_ogd">Open Government Data (OGD)</h3>
 
-            <p>
-            Beim Zugriff auf das Informationsangebot der Stadt Zürich werden Daten zum Zwecke der Systemsicherheit und für anonyme Statistikauswertungen erfasst.
-            </p>
+            <p>Für bestimmte Datensätze bezeichnet die Stadt Zürich separate Nutzungsbedingungen, die eine weitergehende Nutzung explizit erlauben. Datensätze, die unter http://www.stadt-zuerich.ch/ogd bzw. http://data.stadt-zuerich.ch publiziert bzw. referenziert werden, werden nach den in der OGD-Policy ausformulierten Regeln und Bedingungen zur Verfügung gestellt.</p>
 
-            <p>
-            Folgende Protokolldaten werden beim Zugriff auf die städtischen Webseiten gespeichert:
-            </p>
+            <h3 id="datenerfassung">Datenerfassung</h3>
+
+            <p>Beim Zugriff auf das Informationsangebot der Stadt Zürich werden Daten zum Zwecke der Systemsicherheit erfasst.</p>
+
+            <p>Folgende Protokolldaten werden beim Zugriff auf die städtischen Webseiten gespeichert:</p>
 
             <ul>
-                <li>Ihre aktuelle IP-Adresse</li>
-                <li>Ihr Betriebssystem und Browsertyp (User Agent)</li>
-                <li>Datum und Uhrzeit Ihres Zugriffs</li>
-                <li>Die aufgerufenen Seiten</li>
+            <li>Ihre aktuelle IP-Adresse</li>
+            <li>Ihr Betriebssystem und Browsertyp (User Agent)</li>
+            <li>Datum und Uhrzeit Ihres Zugriffs</li>
+            <li>Die aufgerufenen Seiten</li>
             </ul>
 
-            <p>
-            Die erhobenen Verbindungsdaten werden während maximal zwölf Monaten aufbewahrt.
-            </p>
+            <p>Die erhobenen Verbindungsdaten werden während maximal zwölf Monaten aufbewahrt.</p>
 
-            <h3>
-            Vertraulichkeit und Integrität bei Datenübermittlung
-            </h3>
+            <h3 id="auswertungen_zum_verhalten_der_nutzerinnen_und_nutzer">Auswertungen zum Verhalten der Nutzerinnen und Nutzer</h3>
 
-            <p>
-            Werden der Stadt Zürich (z. B. mittels eines zur Verfügung gestellten Kontaktformulars oder per E-Mail) Daten übermittelt, kann weder eine vertrauliche noch eine zuverlässige Datenübertragung gewährleistet werden. Auf solche Kontakte wird die Stadt Zürich im Normalfall ebenfalls elektronisch antworten, wofür wiederum weder Vertraulichkeit noch Integrität der übermittelten Daten zugesichert werden können. Auf diesem Weg sollten deshalb keine vertraulichen Daten übermittelt werden.
-            </p>
+            <p>Beim Zugriff auf das Informationsangebot der Stadt Zürich werden Daten für anonyme Statistikauswertungen erfasst. Die Auswertungen erfolgen mit dem Webanalyse-Service «Adobe Analytics». Hierzu werden folgende Daten an den Webanalyse-Service übertragen:</p>
 
-            <p>
-            Abweichendes gilt nur bei städtischen Internetangeboten, bei denen ausdrücklich auf eine gesicherte Datenübertragung hingewiesen wird. In solchen Fällen werden die besonderen Sicherheitsvorkehrungen üblicherweise angezeigt (z. B. durch https oder ein Schlüssel- bzw. Schloss-Symbol).
-            <h3>
-            Verlinkung mit anderen Internetauftritten
-            </h3>
+            <ul>
+            <li>Ihre aktuelle IP-Adresse</li>
+            <li>Ihr Betriebssystem und Browsertyp (User Agent)</li>
+            <li>Datum und Uhrzeit Ihres Zugriffs</li>
+            <li>Die aufgerufenen Seiten</li>
+            <li>Allgemeine Informationen über den Internet Service Provider (ISP)</li>
+            </ul>
 
-            <p>
-            Die Stadt Zürich hat keinen Einfluss auf externe Seiten, auf die sie verlinkt. Somit kann sie in Bezug auf solche Seiten weder garantieren, dass die darin enthaltenen Informationen richtig sowie die Inhalte frei von Malware (wie z. B. Viren) sind, noch dass die Datenschutzgesetzgebung dort eingehalten wird. Sie kann ebenfalls nicht dafür einstehen, dass diese Links stets einwandfrei funktionieren und unabänderlich auf dieselben Inhalte verweisen.
-            Die Stadt Zürich hat keinen Einfluss auf Seiten, die auf ihr Angebot verlinken, weshalb sie dafür keine Verantwortung übernehmen kann.
-            </p>
+            <p>Es werden keine personenbezogenen Daten gespeichert. Die IP Adresse wird anonymisiert und in dieser Form für die Geo-Lokalisation verwendet. Sie wird vollständig anonymisiert gespeichert. </p>
+
+            <p>Sie haben die Möglichkeit, der Verwendung des Webanalyse-Service jederzeit auf der Website des Webanalyse-Service-Anbieters zu widersprechen. Auf die Funktionalitäten der Website hat dies keinen Einfluss.</p>
+
+            <h3 id="vertraulichkeit_und_integritt_bei_datenbermittlung">Vertraulichkeit und Integrität bei Datenübermittlung</h3>
+
+            <p>Werden der Stadt Zürich (z. B. mittels eines zur Verfügung gestellten Kontaktformulars oder per E-Mail) Daten übermittelt, kann weder eine vertrauliche noch eine zuverlässige Datenübertragung gewährleistet werden. Auf solche Kontakte wird die Stadt Zürich im Normalfall ebenfalls elektronisch antworten, wofür wiederum weder Vertraulichkeit noch Integrität der übermittelten Daten zugesichert werden können. Auf diesem Weg sollten deshalb keine vertraulichen Daten übermittelt werden.</p>
+
+            <p>Abweichendes gilt nur bei städtischen Internetangeboten, bei denen ausdrücklich auf eine gesicherte Datenübertragung hingewiesen wird. In solchen Fällen werden die besonderen Sicherheitsvorkehrungen üblicherweise angezeigt (z. B. durch https oder ein Schlüssel- bzw. Schloss-Symbol).</p>
+
+            <h3 id="verlinkung_mit_anderen_internetauftritten">Verlinkung mit anderen Internetauftritten</h3>
+
+            <p>Die Stadt Zürich hat keinen Einfluss auf externe Seiten, auf die sie verlinkt. Somit kann sie in Bezug auf solche Seiten weder garantieren, dass die darin enthaltenen Informationen richtig sowie die Inhalte frei von Malware (wie z. B. Viren) sind, noch dass die Datenschutzgesetzgebung dort eingehalten wird. Sie kann ebenfalls nicht dafür einstehen, dass diese Links stets einwandfrei funktionieren und unabänderlich auf dieselben Inhalte verweisen. Die Stadt Zürich hat keinen Einfluss auf Seiten, die auf ihr Angebot verlinken, weshalb sie dafür keine Verantwortung übernehmen kann.</p>
+
+            <h3 id="teilen_von_inhalten_auf_social_media">«Teilen» von Inhalten auf Social Media</h3>
+
+            <p>Wenn Sie die Website http://www.stadt-zuerich.ch/ aufrufen, wird noch kein direkter Kontakt zwischen dem Social Network und Ihnen hergestellt, sondern erst dann, wenn Sie auf den «Teilen»-Knopf klicken. Damit wird verhindert, dass Sie auf den besuchten Seiten eine digitale Spur hinterlassen und verbessert so Ihren Datenschutz.</p>
         </div>
