Update to use new LV95/CH1903+ map tiles
This reuses the new JS files from mysociety/fixmystreet#1447 to show the map in
the same way as on the web site.

Part of mysociety/FixMyStreet-Commercial#769

--- a/templates/report.html
+++ b/templates/report.html
@@ -33,7 +33,8 @@
                         'pins': [     [ <%= lat %>, <%= lon %>, '<%= pin_colour %>', '', "", 'big' ]
                      ]
 
-                    }
+                    };
+                    setup_wmts_config();
                     </script>
 
                     <div class="banner">
