--- a/www/templates/report.html
+++ b/www/templates/report.html
@@ -32,8 +32,8 @@
                         'map_type': OpenLayers.Layer.WMTS,
                         'pins': [     [ <%= lat %>, <%= lon %>, '<%= pin_colour %>', '', "", 'big' ]
                      ]
-
-                    }
+                    };
+                    setup_wmts_config();
                     </script>
 
                     <div class="banner">
