--- a/templates/around.html
+++ b/templates/around.html
@@ -21,6 +21,7 @@
                             'pins': [  ]
 
                         };
+                        setup_wmts_config();
 
                     </script>
 
