--- a/templates/help.html
+++ b/templates/help.html
@@ -3,11 +3,11 @@
             <h1 class="title">[% loc('Help') %]</h1>
         </header>
         <div class="content textpage" role="main">
-            <h3 id="was_ist_zri_wie_neu">Was ist «Züri wie neu»</h3>
+            <h3>Was ist «Züri wie neu»</h3>
 
             <p>«Züri wie neu» ist eine Online-Plattform, über die die Einwohnerinnen und Einwohner die Stadt Zürich auf Schäden an der städtischen Infrastruktur hinweisen können. «Züri wie neu» wird von der Stadtverwaltung moderiert und transparent geführt. Die Meldungen werden innerhalb von einem Arbeitstag den zuständigen Fachstellen zugewiesen und innert fünf Arbeitstagen abschliessend beantwortet. Fällt eine Meldung nicht in den Zuständigkeitsbereich der Stadtverwaltung, wird die Meldung anonymisiert der zuständigen dritten Stelle per E-Mail zugestellt.</p>
 
-            <h3 id="welche_probleme_kann_ich_ber_zri_wie_neu_melden">Welche Probleme kann ich über «Züri wie neu» melden?</h3>
+            <h3>Welche Schäden kann ich über «Züri wie neu» melden?</h3>
 
             <p>Gemeldet werden können sämtliche Schäden an der Infrastruktur der Stadt Zürich in folgenden Kategorien:</p>
 
@@ -21,36 +21,39 @@
             <li>VBZ / ÖV</li>
             </ul>
 
-            <h3 id="was_kann_ich_nicht_ber_zri_wie_neu_melden">Was kann ich nicht über «Züri wie neu» melden?</h3>
+
+            <p>Ratten können in der Kategorie «Grünflächen / Spielplätze» gemeldet werden.</p>
+
+            <h3>Was kann ich nicht über «Züri wie neu» melden?</h3>
 
             <ul>
             <li>Schäden die nicht auf Stadtgebiet liegen</li>
-            <li>Melden Sie «Züri wie neu» KEINE Notfälle. Die Notrufnummern lauten: <br />
-            Sanität – 144, Polizei – 117, Feuerwehr – 118, Allgemein - 112</li>
+            <li>Melden Sie «Züri wie neu» KEINE Notfälle. Die Notrufnummern lauten: Sanität – 144, Polizei – 117, Feuerwehr – 118, Allgemein - 112</li>
             <li>Allgemeine Verschönerungs- und Verbesserungsvorschläge</li>
             </ul>
 
-            <h3 id="wie_melde_ich_einen_schaden">Wie melde ich einen Schaden?</h3>
+
+            <h3>Wie melde ich einen Schaden?</h3>
 
             <p>Geben Sie zuerst eine Adresse an oder lassen Sie Ihren Standort automatisch über den entsprechenden Link lokalisieren. Mittels Mausklick in die danach angezeigte Karte können Sie den exakten Ort des Mangels angeben. Als letzten Schritt füllen Sie die Felder des Formulars aus, machen mindestens ein Foto des Schadens und schicken die Meldung ab.</p>
 
-            <h3 id="wie_werden_die_schden_behoben">Wie werden die Schäden behoben?</h3>
+            <h3>Wie werden die Schäden behoben?</h3>
 
             <p>Die Meldungen werden innerhalb von einem Arbeitstag den zuständigen Fachstellen zugewiesen und innert fünf Arbeitstagen von den dafür zuständigen Fachstellen bearbeitet sowie mit einer entsprechenden Rückmeldung versehen.</p>
 
-            <h3 id="kann_ich_zri_wie_neu_auf_meinem_smartphone_nutzen">Kann ich «Züri wie neu» auf meinem Smartphone nutzen?</h3>
+            <h3>Kann ich «Züri wie neu» auf meinem Smartphone nutzen?</h3>
 
             <p>Ja, sowohl über die für mobile Geräte optimierte Webseite, als auch über die iOS- und Android-App.</p>
 
-            <h3 id="kann_ich_auch_schden_ausserhalb_von_zrich_melden">Kann ich auch Schäden ausserhalb von Zürich melden?</h3>
+            <h3>Kann ich auch Schäden ausserhalb von Zürich melden?</h3>
 
             <p>Nein, auf «Züri wie neu» können nur Schäden auf Stadtgebiet gemeldet werden.</p>
 
-            <h3 id="werden_meine_e_mail_adresse_mein_name_und_meine_telefonnummer_vertraulich_behandelt">Werden meine E-Mail-Adresse, mein Name und meine Telefonnummer vertraulich behandelt?</h3>
+            <h3>Werden meine E-Mail-Adresse, mein Name und meine Telefonnummer vertraulich behandelt?</h3>
 
             <p>Die Kontaktinformationen werden nur stadtintern für Rückfragen verwendet. Sie werden weder im Internet publiziert noch an Dritte weitergegeben.</p>
 
-            <h3 id="wer_hat_zri_wie_neu_programmiert">Wer hat «Züri wie neu» programmiert?</h3>
+            <h3>Wer hat «Züri wie neu» programmiert?</h3>
 
             <p>«Züri wie neu» wurde von mySociety programmiert.</p>
         </div>
