--- a/www/templates/help.html
+++ b/www/templates/help.html
@@ -53,6 +53,10 @@
 
             <p>Die Kontaktinformationen werden nur stadtintern für Rückfragen verwendet. Sie werden weder im Internet publiziert noch an Dritte weitergegeben.</p>
 
+            <h3>Wo kann ich mich bei Fragen zu «Züri wie neu» melden?</h3>
+
+            <p><a href="mailto:christian.gees@zuerich.ch">Christian Gees</a> beantwortet gerne Ihre Fragen zu «Züri wie neu».</p>
+
             <h3>Wer hat «Züri wie neu» programmiert?</h3>
 
             <p>«Züri wie neu» wurde von mySociety programmiert.</p>
