Remove iOS scrolling hack, as it might be the cause of disappearing UI (#18)

--- a/www/css/non-android-2.2.css
+++ b/www/css/non-android-2.2.css
@@ -16,11 +16,11 @@ body {
 
 /* Hack to force all relatively and absolutely positioned elements still render while scrolling
    Note: This is a bug for "-webkit-overflow-scrolling: touch" */
-.content > * {
+/*.content > * {
   -webkit-transform: translateZ(0px);
           transform: translateZ(0px);
 }
-
+*/
 
 [class*="bar-"] {
   position: fixed;
