Update geolocation button image

--- a/templates/around.html
+++ b/templates/around.html
@@ -37,7 +37,7 @@
                             <!-- a id="saved-reports" class="nodisplay button-grey">View Drafts</a -->
                             <a id="use-location" class="nodisplay button-blue">[% loc('Use this Location') %]</a>
                             <a id="select-another" class="nodisplay button-grey">[% loc('Select another') %]</a>
-                            <a id="relocate" class="nodisplay button-grey button-grey-plain"><img src="img/location@x2.png"></a>
+                            <a id="relocate" class="nodisplay button-grey button-grey-plain"><img src="img/target.svg"></a>
                     </div>
                 </div>
             <nav class="bar-tab nodisplay">
