--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -242,10 +242,10 @@ input[type=submit].button-blue,
     bottom: 75px;
     height: 32px;
     width: 32px;
-    padding: 4px 5px 5px 3px;
+    padding: 5px;
     margin: 0px;
     border-radius: 2px;
-    background-color: rgb(248,248,248);
+    background-color: #0070BC;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
