--- a/www/templates/photo.html
+++ b/www/templates/photo.html
@@ -54,6 +54,12 @@
                                 <input type="hidden" name="photo" id="form_photo" value="">
                             </div>
                         </fieldset>
+                        <div class="photo-guidance">
+                            <ul>
+                                <li class="do"><span></span>Machen Sie ein Detail- und ein Übersichtsfoto</li>
+                                <li class="dont"><span></span>Verhindern Sie persönliche Informationen wie Autonummern oder Personen</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             <nav class="bar-tab">
