Replace crosshairs with pin placed on map with a tap

--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -32,7 +32,7 @@
                             </div>
                             <div id="swap-map" class="nodisplay">Stadtplan</div>
                             <div id="mark-here" class="nodisplay">
-                            <a class="button-blue">Eine Meldung erfassen</a>
+                            <a class="button-blue">Hier eine Meldung erfassen</a>
                             </div>
                             <!-- a id="saved-reports" class="nodisplay button-grey">View Drafts</a -->
                             <a id="use-location" class="nodisplay button-blue">Hier erfassen</a>
