--- a/templates/help.html
+++ b/templates/help.html
@@ -19,10 +19,9 @@
             <li>Grünflächen / Spielplätze</li>
             <li>Strasse / Trottoir / Platz</li>
             <li>VBZ / ÖV</li>
+            <li>Schädlinge</li>
             </ul>
 
-
-            <p>Ratten können in der Kategorie «Grünflächen / Spielplätze» gemeldet werden.</p>
 
             <h3>Was kann ich nicht über «Züri wie neu» melden?</h3>
 
