Update photo guidance text

--- a/templates/photo.html
+++ b/templates/photo.html
@@ -57,7 +57,7 @@
                         <div class="photo-guidance">
                             <ul>
                                 <li class="do"><span></span>Machen Sie ein Detail- und ein Übersichtsfoto</li>
-                                <li class="dont"><span></span>Verhindern Sie persönliche Informationen wie Autonummern oder Personen</li>
+                                <li class="dont"><span></span>Vermeiden Sie persönliche Informationen auf dem Foto wie Autonummern oder Personen</li>
                             </ul>
                         </div>
                     </div>
