--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -280,48 +280,60 @@ input[type=submit].button-blue,
     z-index: 2000;
 }
 
+#mark-here a {
+    display: block;
+    margin: 0 7px;
+    width: auto;
+}
+
 #tap-the-map p {
     background-color: rgba(0, 105, 175, 0.781);
-    border-radius: 16px;
+    border-radius: 6px;
     color: white;
-    margin: 0 1em;
+    margin: 0 7px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5)
 }
 
 #relocate {
     position: absolute;
-    left: 4%;
+    left: 7px;
     bottom: 100px;
     height: 32px;
     width: 32px;
     padding: 5px;
     margin: 0px;
-    border-radius: 2px;
+    border-radius: 6px;
     background-color: #0070BC;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 #search {
     text-align: center;
-    width: 95%;
     position: absolute;
     left: 0px;
+    right: 0px;
     top: 45px;
     z-index: 2000;
     background-color: rgb(201,201,201);
     padding: 0.2em;
-    margin: 0.4em;
+    margin: 0 7px;
     border-radius: 6px;
     border-color: rgb(201,201,201);
     line-height: 1.4;
     font-size: 16px;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+    height: 26px;
 }
 #search #pc {
-    width: 80%;
     outline: 0 !important;
     border-color: rgb(201,201,201);
     padding: 0.4em;
     border: none;
+    position: absolute;
+    left: 3px;
+    top: 3px;
+    right: 37px;
+    bottom: 3px;
 }
 #search #btn-search {
     background-repeat: no-repeat;
@@ -330,7 +342,10 @@ input[type=submit].button-blue,
     background-color: rgb(201,201,201);
     border-color: rgb(201,201,201);
     border: none;
-    width: 36px;
+    width: 32px;
+    position: absolute;
+    right: 5px;
+    top: 6px;
 }
 
 #swap-map {
@@ -340,7 +355,9 @@ input[type=submit].button-blue,
     right: 0px;
     background: #0070BC;
     background-color: #0070BC;
-    border-color: #0070BC;
+    border-color: rgba(0, 0, 0, .3);
+    border-width: 1px 0 1px 1px;
+    border-style: solid;
     border-radius: 6px 0px 0px 6px;
     color: white;
     line-height: 1.8em;
