Fix setting of extra data.
This div was removed in fc17b97b, but the code uses it to spot extra
fields.

--- a/templates/details_extra.html
+++ b/templates/details_extra.html
@@ -8,7 +8,9 @@
                     <fieldset>
                         <div id="problem_form">
                             <div class="ext-form-content">
-                                <%= category_extras %>
+                                <div id="category_extras">
+                                    <%= category_extras %>
+                                </div>
 
                                 <div class="form-txt-submit-box">
                                     <input class="button-blue" type="button" id="send_report" name="send_report" value="[% loc('Submit') %]">
