--- a/templates/details.html
+++ b/templates/details.html
@@ -9,7 +9,7 @@
                                 <div class="ext-form-content">
 
                                     <div id="form_category_row">
-                                        <% if ( report.categories != '' ) { %> <%= report.categories %> <% } else { %>
+                                        <% if ( report.categories_html != '' ) { %> <%= report.categories_html %> <% } else { %>
                                         <label class="inline" for="form_category">[% loc('Category') %]</label>
                                         <select name="category" id="form_category" required><option>[% loc('Loading...') %]</option></select>
                                     <% } %>
