--- a/www/templates/details_extra.html
+++ b/www/templates/details_extra.html
@@ -9,7 +9,7 @@
                         <div id="problem_form">
                             <div class="ext-form-content">
                                 <div id="category_extras">
-                                    <%= category_extras %>
+                                    <%= category_extras_html %>
                                 </div>
 
                                 <div class="form-txt-submit-box">
