--- a/www/templates/help.html
+++ b/www/templates/help.html
@@ -55,7 +55,7 @@
 
             <h3>Wo kann ich mich bei Fragen zu «Züri wie neu» melden?</h3>
 
-            <p><a href="mailto:christian.gees@zuerich.ch">Christian Gees</a> beantwortet gerne Ihre Fragen zu «Züri wie neu».</p>
+            <p><a href="mailto:gis-zentrum@zuerich.ch">GIS-Zentrum</a> beantwortet gerne Ihre Fragen zu «Züri wie neu».</p>
 
             <h3>Wer hat «Züri wie neu» programmiert?</h3>
 
